fixed spacing in projects section

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ hr {
 NAVBAR
 */
 .header {
-	background-color: rgb(27, 27, 27);
+	background-color: rgb(0, 0, 0);
 }
 
 .nav__header {
@@ -297,11 +297,9 @@ hero section
 	height: calc(100vh - 75px);
 	display: grid;
 	place-items: center;
-	/* background: rgba(0, 0, 0, 0.2);  */
-	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./hero.jpg") center / cover no-repeat;
-	/* background: center / contain no-repeat url("../../media/examples/firefox-logo.svg"), */
-            /* #eee 35% url("../../media/examples/lizard.png"); */
-	/* background-color: var(--header-clr); */
+	background:rgb(0, 0, 0);
+	/* background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./hero.jpg") center / cover no-repeat; */
+	
 	background-blend-mode: multiply;
 }
 
@@ -365,15 +363,46 @@ projects section
 }
 
 .projects__card{
-	
+	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: row;
 	
 }
 
+.projects__text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	text-align: left;
+	padding: 3rem;
+	/* height: 100%;
+	width: 100%; */
+	
+}
+
+.projects__title {
+	/* padding: 1rem; */
+	/* text-align: center; */
+	
+}
+
+.projects__description {
+	
+}
+
+.projects__stack{
+	
+}
+
+.project__buttons {
+	display: flex;
+	justify-content: space-evenly;
+}
 .projects__image {
 	width: 100%;
 	height: 100%;
+	
 }
 
 .img {
